<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shopping List</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="toast_message_done">Done</string>

    <string name="login_dialog_message">Incorrect credentials</string>
    <string name="login_dialog_button_positive">OK</string>

    <string name="add_item_dialog_title">Add new item</string>
    <string name="add_item_dialog_tag">Add new</string>

    <string name="list_detail_dialog_message">Delete this item from list?</string>
    <string name="list_detail_dialog_positive_button">Delete</string>
    <string name="list_detail_dialog_negative_button">Cancel</string>

    <string name="new_list_dialog_title">Create new list</string>

    <string name="lists_dialog_message">What do you want to do?</string>
    <string name="lists_dialog_postive_button">Share list?</string>
    <string name="lists_dialog_negative_button">Delete list?</string>

    <string name="navbar_title_home">Home</string>
    <string name="navbar_title_shopping_lists">Shopping Lists</string>
    <string name="navbar_title_settings">Settings</string>

    <string name="activity_login_phone_number">Phone number</string>
    <string name="activity_login_password">Password</string>
    <string name="activity_login_button_login">Login</string>
    <string name="activity_login_text_register">Not registered? Do it here</string>

    <string name="activity_register_phone_number">Enter phone number</string>
    <string name="activity_register_password">Enter password</string>
    <string name="activity_register_repeat_password">Repeat password</string>
    <string name="activity_register_button_register">Register</string>

    <string name="fragment_home_text">Home</string>
    <string name="fragment_settings_text">Settings</string>
    <string name="fragment_list_detail_button_update_list">Update list</string>
    <string name="fragment_list_detail_button_add_item">Add item</string>
    <string name="fragment_list_detail_empty_text">No items found!</string>
    <string name="fragment_list_button_new_list">New list</string>
    <string name="fragment_list_button_refresh">Refresh</string>
    <string name="fragment_list_empty_text">No lists found!</string>

    <string name="spinner_language">Select language</string>
    <string name="spinner_button_text">Update change</string>
    <string-array name="languages">
        <item>English</item>
        <item>Danish</item>
    </string-array>



</resources>
